编译运行提交的代码 1）黑名单校验 2）提交的代码权限控制